--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
     "@nuxtjs/tailwindcss": "^6.4.1",
     "nuxt": "^3.2.3",
     "tailwindcss": "^3.2.7"
+  },
+  "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
+    "ajax": "^0.0.4",
+    "chart.js": "^4.2.1",
+    "flowbite": "^1.6.3",
+    "sass": "^1.59.2"
   }
 }
