--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ajax": "^0.0.4",
     "chart.js": "^4.2.1",
     "flowbite": "^1.6.3",
-    "sass": "^1.59.2"
+    "sass": "^1.59.2",
+    "vite-node": "^0.29.7"
   }
 }
