--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
+    "@nuxt/http": "^0.6.4",
     "@nuxtjs/axios": "^5.13.6",
     "ajax": "^0.0.4",
     "chart.js": "2.9.3",
